<resources>
    <string name="app_name">KBC QnA</string>
    <string name="region">Region</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="india">INDIA</string>
    <string name="global">GLOBAL</string>
    <string name="back">Back</string>
    <string name="start">Start</string>
    <string name="play_online">Play Online</string>
    <string name="play_offline">Play Offline</string>
    <string name="settings">Settings</string>
    <string name="next_question">Next Question</string>
    <string name="lock">LOCK</string>
    <string name="you_won">You Won</string>
    <string name="better_luck">BETTER LUCK</string>
    <string name="next_time">NEXT TIME</string>
    <string name="share_cheque">Share\nCheque</string>
    <string name="more_games">More\nGames</string>
    <string name="share_game">Share\nGame</string>
    <string name="congratulations">CONGRATULATIONS!!</string>
    <string name="quit">QUIT</string>
    <string name="start_again">START AGAIN</string>
    <string name="home">HOME</string>
    <string name="sfx_sound">SFX Sound</string>
    <string name="music">Music</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="reset">Reset</string>
    <string name="nothing_to_show">Nothing to show…</string>
    <string name="loading">Loading…</string>
    <string name="position_string">"%d. "</string>
    <string name="player">Player :</string>
    <string name="loading_text">Getting questions\n This may take a while…</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="clear_leaderboard_confirm">Are you sure you want to clear the leaderboard?</string>
    <string name="kaun_banega">KAUN BANEGA</string>
    <string name="crorepati">CROREPATI</string>
    <string name="enter_name">Enter Name</string>
    <string name="checking_username">Checking username…</string>
    <string name="loading_questions">Loading questions…</string>
    <string name="share_score">Share Score</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="secret_admin_options">Secret Admin Options</string>
    <string name="app_version">App version - %1$s %2$s</string>
    <string name="updating_firebase_">Updating Firebase…</string>
    <string name="update_firebase">Update Firebase</string>
    <string name="type_the_message_users_will_see_when_the_server_is_down">Type the message users will see when the server is down…</string>
    <string name="maintenance_alert_message">Maintenance Alert Message</string>
    <string name="enable_maintenance_mode">Enable Maintenance Mode</string>
    <string name="maintenance_mode">Maintenance Mode</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="unselect_all">Unselect All</string>
    <string name="select_all">Select All</string>
    <string name="select_entrants_to_delete">Select Entrants to Delete</string>
    <string name="leaderboard_configurator">Leaderboard Configurator</string>
    <string name="description_of_update">Description of update…</string>
    <string name="update_message">Update Message</string>
    <string name="dialog_type">Dialog Type</string>
    <string name="e_g_1_1">e.g. 1.1</string>
    <string name="new_app_version">New App Version</string>
    <string name="app_update_configurator">App Update Configurator</string>
    <string name="configure_prize_levels">Configure Prize Levels</string>
    <string name="prize_configurator">Prize Configurator</string>
    <string name="_5_maintenance_mode_config">5. Maintenance Mode Config</string>
    <string name="_4_question_bank_statistics">4. Question Bank Statistics</string>
    <string name="_3_configure_leaderboard">3. Configure Leaderboard</string>
    <string name="_2_manage_app_updates">2. Manage App Updates</string>
    <string name="_1_configure_prize_levels">1. Configure Prize Levels</string>
    <string name="breakdown_by_prize_level">Breakdown by Prize Level</string>
    <string name="_0">0</string>
    <string name="total_remote_questions">Total Remote Questions</string>
    <string name="question_statistics">Question Statistics</string>
    <string name="add_question_to_firebase">Add Question to Firebase</string>
    <string name="_6_add_question">6. Add Question to Firebase</string>
    <string name="enter_question">Enter Question</string>
    <string name="enter_option_1">Enter Option 1</string>
    <string name="enter_option_2">Enter Option 2</string>
    <string name="enter_option_3">Enter Option 3</string>
    <string name="enter_option_4">Enter Option 4</string>
    <string name="select_correct_option">Select Correct Option</string>
    <string name="select_prize_amount">Select Prize Amount</string>
    <string name="select_region">Select Region</string>
    <string name="adding_question_">Adding Question…</string>
    <string name="add_question">Add Question</string>
    <string name="question_added_successfully">Question added successfully!</string>
    <string name="type_question_here">Type question here…</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="play">Play</string>
    <string name="cancel">Cancel</string>
    <string name="submit">SUBMIT</string>
    <string name="your_name">Your Name</string>
    <string name="would_you_like_to_submit_your_score_to_the_online_leaderboard_enter_your_name_below">Would you like to submit your score to the online leaderboard? Enter your name below:</string>
    <string name="submit_to_leaderboard">Submit to Leaderboard</string>
    <string name="feedback_and_bugs">Feedback &amp; Bugs</string>
    <string name="write">WRITE</string>
    <string name="feedback_title">Feedback &amp; Bug Report</string>
    <string name="feedback_type">Feedback Type</string>
    <string name="type_feedback_here">Type your feedback or bug details here…</string>
    <string name="enter_name_optional">Your Name (Optional)</string>
    <string name="enter_email_optional">Your Email (Optional)</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="submitting_feedback_">Submitting Feedback…</string>
    <string name="feedback_submitted_successfully">Feedback submitted successfully!</string>
    <string name="please_enter_message">Please enter a description/message.</string>
    <string name="bug_report">Bug Report</string>
    <string name="feedback">Feedback</string>
    <string name="_7_manage_feedbacks">7. Manage Feedbacks</string>
    <string name="feedback_manager">Feedback Manager</string>
    <string name="select_feedbacks_to_mark_done">Select Feedbacks to Mark as Done</string>
    <string name="mark_done">Mark as Done</string>
    <string name="marking_done_">Marking Done…</string>
    <string name="feedbacks_marked_done_successfully">Feedbacks marked as done successfully!</string>
    <string name="please_select_at_least_one_feedback">Please select at least one feedback to mark done.</string>
    <string name="email_example_com">email@example.com</string>
    <string name="hang_up">Hang Up</string>
    <string name="calling">Calling…</string>
    <string name="connected_00_00">Connected (00:00)</string>
    <string name="ringing">Ringing…</string>
    <string name="ok">OK</string>
    <string name="friend_s_avatar">Friend\'s Avatar</string>
    <string name="friends_desc_3">Very cautious. Accurate, but won\'t guess on hard questions.</string>
    <string name="friend_name_3">Neha (The Cautious)</string>
    <string name="friend_3">Friend 3</string>
    <string name="friend_desc_2"><![CDATA[Pop Culture, Sports & Media expert. Guesses on History.]]></string>
    <string name="friend_name_2">Aman (The Gamer)</string>
    <string name="friend_2">Friend 2</string>
    <string name="friend_desc_1"><![CDATA[Expert in History & Science. Weak on Pop Culture.]]></string>
    <string name="friend_name_1">Rahul (The Scholar)</string>
    <string name="friend_1">Friend 1</string>
    <string name="choose_a_friend_to_call">Choose a Friend to Call</string>
    <string name="option_d">Option D</string>
    <string name="option_c">Option C</string>
    <string name="option_b">Option B</string>
    <string name="option_a">Option A</string>
    <string name="audience_poll_results">Audience Poll Results</string>
    <string name="milestone_reached_icon">Milestone reached icon</string>
    <string name="safe_haven_reached">Safe Haven Reached!</string>
    <string name="congratulations_you_have_secured_your_prize_money">Congratulations! You have secured your prize money.</string>
    <string name="continue_">CONTINUE</string>
    <string name="downloading_update">Downloading Update</string>
    <string name="please_wait_while_the_update_downloads">Please wait while the update downloads…</string>
    <string name="exit">Exit</string>
</resources>